[gd_scene load_steps=45 format=2]

[ext_resource path="res://Ant.gd" type="Script" id=1]
[ext_resource path="res://Ants Resorce/Animations/AntSpriteSheet2.png" type="Texture" id=2]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Zones/DetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Zones/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://WanderController.tscn" type="PackedScene" id=6]
[ext_resource path="res://Zones/HurtBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Zones/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://ClickArea.gd" type="Script" id=9]

[sub_resource type="CapsuleShape2D" id=4]
radius = 2.34484
height = 4.50026

[sub_resource type="Animation" id=5]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Ant Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_start"
}, {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DetectionZone/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "gain_exp"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Ant Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=7]
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Ant Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "search_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DetectionZone:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 1, 1.4, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 45.0, 45.0, -45.0, -45.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DetectionZone:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 1.7, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Ant Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 11, 12, 13, 14, 15, 16, 17, 18, 19, 20 ]
}

[sub_resource type="Animation" id=9]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Ant Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 24, 25, 26, 27, 28 ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Search"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Walk Leaf"

[sub_resource type="AnimationNodeTimeScale" id=14]

[sub_resource type="AnimationNodeBlendTree" id=15]
graph_offset = Vector2( 0, 146.25 )
nodes/Animation/node = SubResource( 13 )
nodes/Animation/position = Vector2( 80, 200 )
nodes/TimeScale/node = SubResource( 14 )
nodes/TimeScale/position = Vector2( 260, 200 )
nodes/output/position = Vector2( 420, 220 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "Animation" ]

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "Walk"

[sub_resource type="AnimationNodeTimeScale" id=17]

[sub_resource type="AnimationNodeBlendTree" id=18]
graph_offset = Vector2( -6.10352e-05, 0 )
nodes/Animation/node = SubResource( 16 )
nodes/Animation/position = Vector2( 80, 80 )
nodes/TimeScale/node = SubResource( 17 )
nodes/TimeScale/position = Vector2( 300, 60 )
nodes/output/position = Vector2( 520, 80 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "Animation" ]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachine" id=31]
states/Attack/node = SubResource( 10 )
states/Attack/position = Vector2( 310, 73 )
states/Idle/node = SubResource( 11 )
states/Idle/position = Vector2( 428, 148 )
states/Search/node = SubResource( 12 )
states/Search/position = Vector2( 428, 273 )
states/Walk/node = SubResource( 18 )
states/Walk/position = Vector2( 539, 73 )
"states/Walk Leaf/node" = SubResource( 15 )
"states/Walk Leaf/position" = Vector2( 248.667, 153.429 )
transitions = [ "Idle", "Attack", SubResource( 19 ), "Attack", "Idle", SubResource( 20 ), "Walk", "Idle", SubResource( 21 ), "Idle", "Walk", SubResource( 22 ), "Idle", "Search", SubResource( 23 ), "Search", "Idle", SubResource( 24 ), "Search", "Walk", SubResource( 25 ), "Walk", "Attack", SubResource( 26 ), "Attack", "Walk", SubResource( 27 ), "Walk", "Search", SubResource( 28 ), "Walk Leaf", "Idle", SubResource( 29 ), "Idle", "Walk Leaf", SubResource( 30 ) ]
start_node = "Idle"
graph_offset = Vector2( -272.333, 40.4292 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=33]

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 8.12613, 5.47466 )

[sub_resource type="ConvexPolygonShape2D" id=34]
points = PoolVector2Array( -7, 0, 150, -45, 150, 45 )

[sub_resource type="CapsuleShape2D" id=35]
radius = 1.159
height = 3.91978

[sub_resource type="CapsuleShape2D" id=36]
radius = 2.57252
height = 4.09592

[sub_resource type="CapsuleShape2D" id=37]
radius = 1.91966
height = 5.8698

[sub_resource type="CapsuleShape2D" id=38]
radius = 1.76989
height = 3.89305

[node name="Ant" type="KinematicBody2D"]
light_mask = -2147483647
collision_layer = 3
collision_mask = 515
script = ExtResource( 1 )
proximity_range = 8

[node name="Ant Spritesheet" type="Sprite" parent="."]
position = Vector2( -0.220459, 1.45681 )
texture = ExtResource( 2 )
offset = Vector2( 0, -0.5 )
hframes = 54
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.25136, 0.0331078 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Search = SubResource( 7 )
anims/Walk = SubResource( 8 )
"anims/Walk Leaf" = SubResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 31 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 33 )
parameters/Walk/TimeScale/scale = 2.5
"parameters/Walk Leaf/TimeScale/scale" = 2.5

[node name="WanderController" parent="." instance=ExtResource( 6 )]
wander_range = 150

[node name="Stats" parent="." instance=ExtResource( 3 )]
MAX_HP = 3
CUR_HP = 3
MAX_SPEED = 80
MAX_LEVEL = 100.0
HUNGER = 100
THIRST = 50

[node name="ClickArea" type="Area2D" parent="."]
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
visible = false
shape = SubResource( 32 )

[node name="DetectionZone" parent="." instance=ExtResource( 4 )]
collision_mask = 12

[node name="CollisionShape2D" parent="DetectionZone" index="0"]
position = Vector2( 5, 0 )
shape = SubResource( 34 )

[node name="DetectionZone2" parent="." instance=ExtResource( 4 )]
position = Vector2( -2.35395, 0.117985 )
scale = Vector2( 1.14933, 1.11266 )
collision_mask = 12

[node name="CollisionShape2D" parent="DetectionZone2" index="0"]
visible = false
position = Vector2( 8.26441, -0.0897349 )
shape = SubResource( 35 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_layer = 0
collision_mask = 96

[node name="CollisionShape2D" parent="Hitbox" index="0"]
visible = false
position = Vector2( 6.69484, 0.333712 )
shape = SubResource( 36 )
disabled = true

[node name="HurtBox" parent="." instance=ExtResource( 7 )]
position = Vector2( -1, 0 )
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
visible = false
rotation = 1.5708
shape = SubResource( 37 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]
position = Vector2( -0.888638, 0.111362 )

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
visible = false
position = Vector2( -1, 0 )
rotation = 1.5708
shape = SubResource( 38 )
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="mouse_entered" from="ClickArea" to="ClickArea" method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="ClickArea" method="_on_ClickArea_mouse_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="WanderController"]

[editable path="DetectionZone"]

[editable path="DetectionZone2"]

[editable path="Hitbox"]

[editable path="HurtBox"]

[editable path="SoftCollision"]
